# sitesmith

./: Cargo.toml  README.md
src/: main.rs
src/parser/: cli.rs  htmlreader.rs  mod.rs  projectreader.rs  workreader.rs
