[package]
name = "sitesmith"
version = "0.1.0"
edition = "2021"
authors = ["Braden Everson <bradeneverson@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "An automated personal site generator!"
homepage = "https://github.com/BradenEverson/sitesmith"
repository = "https://github.com/BradenEverson/sitesmith"
keyworks = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
